--- a/css/index.css
+++ b/css/index.css
@@ -7,11 +7,11 @@
 
 /* 布局辅助 */
 .background {
-  position: absolute;
+  position: fixed;
   display: block;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -90;
   width: 100%;
   height: 100%;
 }
